--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="../../normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Flower Shop</title>
   </head>
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section>
-          <img src="./images/flower.jpeg" alt="Flower">
+        <img src="./images/flower.jpeg" alt="Flower" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
           rem quod. Commodi fuga animi quia enim sapiente atque et, deserunt
@@ -24,24 +24,24 @@
       </section>
 
       <section>
-            <img src="./images/rose.jpg" alt="Rose">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
-            rem quod. Commodi fuga animi quia enim sapiente atque et, deserunt
-            amet a provident praesentium, ipsam exercitationem tenetur repellendus
-            dolorum! Dolores!
-          </p>
-        </section>
+        <img src="./images/rose.jpg" alt="Rose" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
+          rem quod. Commodi fuga animi quia enim sapiente atque et, deserunt
+          amet a provident praesentium, ipsam exercitationem tenetur repellendus
+          dolorum! Dolores!
+        </p>
+      </section>
 
-        <section>
-                <img src="./images/sunflower.jpg" alt="Sunflower">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
-                rem quod. Commodi fuga animi quia enim sapiente atque et, deserunt
-                amet a provident praesentium, ipsam exercitationem tenetur repellendus
-                dolorum! Dolores!
-              </p>
-            </section>
+      <section>
+        <img src="./images/sunflower.jpg" alt="Sunflower" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
+          rem quod. Commodi fuga animi quia enim sapiente atque et, deserunt
+          amet a provident praesentium, ipsam exercitationem tenetur repellendus
+          dolorum! Dolores!
+        </p>
+      </section>
     </main>
   </body>
 </html>
